[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["ohirshman <hirshmanor@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
streamlit = "^1.51.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
